[package]
name = "rql_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.3"
hashbrown = { version = "0.13.2", features = ["serde", "ahash"] }
left-right = "0.11.5"
serde_json = "1.0.96"
